--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,13 @@
     <dependency>
       <groupId>local.house</groupId>
       <artifactId>houseInterface</artifactId>
-      <version>2.0.33Bate</version>
+      <version>2.0.38Bate</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.2</version>
     </dependency>
 
     <!--  deltaspike  -->
