--- a/pom.xml
+++ b/pom.xml
@@ -14,22 +14,25 @@
       <id>in-project</id>
       <name>In Project Repo</name>
       <url>file://${project.basedir}/lib/</url>
+
     </repository>
 
+    <!--
     <repository>
       <id>prime-repo</id>
       <name>PrimeFaces Maven Repository</name>
       <url>http://repository.primefaces.org</url>
       <layout>default</layout>
     </repository>
+   -->
   </repositories>
 
 
   <properties>
     <deltaspike.version>1.7.2</deltaspike.version>
-    <primefaces.version>6.0</primefaces.version>
-    <bootsfaces.version>1.0.2</bootsfaces.version>
-    <omnifaces.version>2.3</omnifaces.version>
+    <primefaces.version>6.1</primefaces.version>
+    <bootsfaces.version>1.1.1</bootsfaces.version>
+    <omnifaces.version>2.6.1</omnifaces.version>
     <version.picketlink.javaee.bom>2.7.1.Final</version.picketlink.javaee.bom>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,8 +69,8 @@
 
     <dependency>
       <groupId>local.house</groupId>
-      <artifactId>houseInterface</artifactId>
-      <version>2.0.53Bate</version>
+      <artifactId>HouseInterface</artifactId>
+      <version>2.0.60Bate</version>
     </dependency>
 
     <dependency>
