--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>local.house</groupId>
       <artifactId>HouseInterface</artifactId>
-      <version>2.0.84Bate</version>
+      <version>2.0.86Bate</version>
     </dependency>
 
     <dependency>
@@ -90,6 +90,12 @@
       <version>2.7.6</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20090211</version>
+    </dependency>
     <!--  deltaspike  -->
 
     <dependency>
