--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <properties>
     <deltaspike.version>1.7.2</deltaspike.version>
     <primefaces.version>6.1</primefaces.version>
-    <bootsfaces.version>1.1.3</bootsfaces.version>
+    <bootsfaces.version>1.2.0</bootsfaces.version>
     <omnifaces.version>2.6.1</omnifaces.version>
     <version.picketlink.javaee.bom>2.7.1.Final</version.picketlink.javaee.bom>
 
@@ -72,7 +72,25 @@
     <dependency>
       <groupId>local.house</groupId>
       <artifactId>HouseInterface</artifactId>
-      <version>2.0.103Bate</version>
+      <version>2.0.109Bate</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.12</version>
+    </dependency>
+
+    <dependency>
+          <groupId>com.itextpdf</groupId>
+          <artifactId>itext-asian</artifactId>
+          <version>5.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.59</version>
     </dependency>
 
     <dependency>
