--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     <dependency>
       <groupId>local.house</groupId>
       <artifactId>HouseInterface</artifactId>
-      <version>2.0.115Bate</version>
+      <version>2.0.126Bate</version>
     </dependency>
 
     <dependency>
@@ -96,6 +96,12 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
+      <version>4.5.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpmime</artifactId>
       <version>4.5.2</version>
     </dependency>
 
